# minecraft-bedrock-updater-py

./: .gitignore  README.md  download.py  pyproject.toml  start_minecraft.sh  update.sh
