[tool.poetry]
name = "bedrock-updater"
version = "0.1.0"
description = ""
authors = ["Lyrise <lyrise1984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
playwright = "^1.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
